--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ src/estimate_capacity
 src/dump_table
 src/lookup_accession_numbers
 src/k2mask
+read/build_db
+read/build_db.*
+read/classify
+read/classify.*
