--- a/read/Makefile
+++ b/read/Makefile
@@ -3,5 +3,9 @@
 clean:
 	rm -f *.o $(PROGS)
 
+
 build_db: build_db.o ../src/mmap_file.o ../src/compact_hash.o ../src/taxonomy.o ../src/seqreader.o ../src/mmscanner.o ../src/omp_hack.o ../src/utilities.o
-	g++ -Wall -std=c++11 -O3 -fPIC -DLINEAR_PROBING -o build_db  $^
+	g++ -Wall -std=c++11 -g -O0 -fPIC -DLINEAR_PROBING -o build_db $^
+
+build_db.o: build_db.cc
+	g++ -Wall -std=c++11 -g -O0 -fPIC -DLINEAR_PROBING -c -o build_db.o build_db.cc
