--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,22 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/read/build_db",
-            "args": [],
+             "args": [
+                "-k", "35",
+                "-l", "31",
+                "-S", "1111111111111111101010101010101",
+                "-H", "hash.k2d.tmp",
+                "-t", "taxo.k2d.tmp",
+                "-o", "opts.k2d.tmp",
+                "-n", "${workspaceFolder}/data/small_db/taxonomy/",
+                "-m", "${workspaceFolder}/data/small_db/seqid2taxid.map",
+                "-c", "24137",
+                "-p", "1",
+                "-B", "16384",
+                "-b", "16384",
+                "-r", "0",
+                "<", "${workspaceFolder}/data/small_db/library/added/FKmc8uicpL.fna"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/read",
             "environment": [],
